# splotrs

./: .pre-commit-config.yaml  .yamloom.py  CHANGELOG.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  pyproject.toml  release-please-config.json
.github/workflows/: CI.yml  release.yml  release_please.yml
examples/: bump.py
python/tests/: test_splot.py
src/: fit.rs  lib.rs  python.rs
